# ranker-sorter

./: .editorconfig  .eslintrc.cjs  .eslintrc.json  .gitignore  .hintrc  .pre-commit-config.yaml  .prettierrc.json  .stylelintrc.json  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  ranker_sorter.py  stylelint.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: deploy.yaml  deploy.yml
.reuse/: dep5
public/: 404.html  contribute.json  noscript.css  robots.txt  sitemap.txt
public/.well-known/: gpc.json
python/: pyproject.toml  ranker_sorter.py  test.json
src/: App.css  App.tsx  app.tsx  context.ts  form.ts  html-helpers.ts  index.css  index.tsx  main.ts  main.tsx  ranker.ts  results.ts  schemas.ts  vite-env.d.ts
src/App/: index.ts
src/LoadList/: LoadList.tsx
src/Loading/: Loading.tsx  index.ts
src/Ranker/: Ranker.tsx  index.ts
src/Results/: Results.tsx  index.ts
src/app/: actions.ts  schemas.ts  store.ts
src/assets/: mixins.css  players.json
src/components/: Button.tsx  Charts.tsx  FileForm.tsx  IconImage.tsx  Loading.tsx  ManualForm.tsx  RankCreator.tsx  Ranker.tsx  Result.tsx  chart.module.css  chart.tsx  create-list.module.css  create-list.tsx  load-list.module.css  load-list.tsx  loading.tsx  ranker.module.css  ranker.tsx  results.tsx
typescript/: .editorconfig  .eslintrc.json  .gitignore  .hintrc  .stylelintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+68 files in other folders)
